# f1-data-platform

./: .env.example  .gitignore  LICENSE.md  README.md  dbt_project.yml  pyproject.toml  requirements.txt
f1_pipeline/config/: settings.py
f1_pipeline/ingestion/: api_client.py  data_transformer.py  orchestrator.py
f1_pipeline/utils/: database.py
macros/: convert_time_string_to_ms.sql  helpers.sql
models/: schema.yml
models/analytics/: circuit_specific_driver.sql  driver_momentum.sql  mart_qualifying_consistency.sql  mart_session_progression.sql  race_pace_vs_qualifying.sql  schema.yml  sector_performance.sql  session_degradation.sql  tire_strategy.sql  traffic_impact.sql
models/marts/: mart_circuit_summary.sql  mart_driver_profile_summary.sql  mart_driver_race_summary.sql  mart_position_summary.sql  mart_session_summary.sql  mart_stint_degradation_summary.sql  mart_stint_summary.sql
models/staging/: _sources.yml  schema.yml  stg_lap_times.sql  stg_pit_stops.sql
scripts/: ingest_f1_data.py
seeds/: sample_lap_data.csv
tests/: test_stint_segmentation.sql
tests/generic/: test_realistic_f1_times.sql  test_stint_progression.sql
